; ModuleID = '/home/carl/AnghaBench/libgit2/tests/index/extr_racy.c_test_index_racy__read_index_clears_uptodate_bit.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/index/extr_racy.c_test_index_racy__read_index_clears_uptodate_bit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@g_repo = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [2 x i8] c"A\00", align 1
@GIT_INDEX_ENTRY_UPTODATE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [2 x i8] c"B\00", align 1
@.str.2 = private unnamed_addr constant [2 x i8] c"C\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_index_racy__read_index_clears_uptodate_bit() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = call i32 (...) @setup_uptodate_files()
  %5 = load i32, i32* @g_repo, align 4
  %6 = call i32 @git_repository_index(i32** %1, i32 %5)
  %7 = call i32 @cl_git_pass(i32 %6)
  %8 = call i32 @git_index_new(i32** %2)
  %9 = call i32 @cl_git_pass(i32 %8)
  %10 = load i32*, i32** %2, align 8
  %11 = load i32*, i32** %1, align 8
  %12 = call i32 @git_index_read_index(i32* %10, i32* %11)
  %13 = call i32 @cl_git_pass(i32 %12)
  %14 = load i32*, i32** %2, align 8
  %15 = call %struct.TYPE_4__* @git_index_get_bypath(i32* %14, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i32 0)
  store %struct.TYPE_4__* %15, %struct.TYPE_4__** %3, align 8
  %16 = call i32 @cl_assert(%struct.TYPE_4__* %15)
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = load i32, i32* @GIT_INDEX_ENTRY_UPTODATE, align 4
  %21 = and i32 %19, %20
  %22 = call i32 @cl_assert_equal_i(i32 0, i32 %21)
  %23 = load i32*, i32** %2, align 8
  %24 = call %struct.TYPE_4__* @git_index_get_bypath(i32* %23, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0), i32 0)
  store %struct.TYPE_4__* %24, %struct.TYPE_4__** %3, align 8
  %25 = call i32 @cl_assert(%struct.TYPE_4__* %24)
  %26 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %27 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = load i32, i32* @GIT_INDEX_ENTRY_UPTODATE, align 4
  %30 = and i32 %28, %29
  %31 = call i32 @cl_assert_equal_i(i32 0, i32 %30)
  %32 = load i32*, i32** %2, align 8
  %33 = call %struct.TYPE_4__* @git_index_get_bypath(i32* %32, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.2, i64 0, i64 0), i32 0)
  store %struct.TYPE_4__* %33, %struct.TYPE_4__** %3, align 8
  %34 = call i32 @cl_assert(%struct.TYPE_4__* %33)
  %35 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %36 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 4
  %38 = load i32, i32* @GIT_INDEX_ENTRY_UPTODATE, align 4
  %39 = and i32 %37, %38
  %40 = call i32 @cl_assert_equal_i(i32 0, i32 %39)
  %41 = load i32*, i32** %1, align 8
  %42 = call i32 @git_index_free(i32* %41)
  %43 = load i32*, i32** %2, align 8
  %44 = call i32 @git_index_free(i32* %43)
  ret void
}

declare dso_local i32 @setup_uptodate_files(...) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_repository_index(i32**, i32) #1

declare dso_local i32 @git_index_new(i32**) #1

declare dso_local i32 @git_index_read_index(i32*, i32*) #1

declare dso_local i32 @cl_assert(%struct.TYPE_4__*) #1

declare dso_local %struct.TYPE_4__* @git_index_get_bypath(i32*, i8*, i32) #1

declare dso_local i32 @cl_assert_equal_i(i32, i32) #1

declare dso_local i32 @git_index_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
